welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:35: error: Unmatched closing brace '}' ignored here
}
^